--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!-- logo -->
         <a class="navbar-brand" routerLink="/">
-            GIL AVRAHAM | full-stuck Developer
+            GIL AVRAHAM | Software Developer
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
