--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,3 +1,7 @@
+.page {
+    padding-bottom: 2%;
+}
+
 .form-container {
     padding: 2%;
     border-radius: 0.2cm;
@@ -29,4 +33,9 @@
 
 .form-btn {
     padding: 2%;
+}
+
+.msg {
+    padding: 2%;
+    text-align: center;
 }
