--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark">
+<footer class="footer fixed-bottom bg-dark">
     <div class="container-xl">
         <div class="row">
             <div class="col-12 align-self-center">
