--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -92,7 +92,7 @@
           <p>Deep URL Analysis website</p>
         </div>
         <div class="col-1">
-          <i class="bi bi-file-excel"></i>
+          <i class="bi bi-file-lock"></i>
         </div>
         <div class="col">
           <ul>
