--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -55,7 +55,7 @@
       </div>
       <!-- button -->
       <div class="d-grid gap-2 col-6 mx-auto form-btn">
-        <button type="submit" class="btn btn-outline-light">Sign in</button>
+        <button type="submit" class="btn btn-outline-light">Contact me</button>
       </div>
     </form>
   </div>
